MODINREACH-561: Apply review suggestions